--- a/works.html
+++ b/works.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>entranceworks</title>
         <meta name="description" content="コーポレートサイト">
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
         <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
