--- a/works.html
+++ b/works.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>entranceworks</title>
         <meta name="description" content="コーポレートサイト">
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1,minimun-scale=1,user-scalable=1"/>
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
         <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
@@ -14,7 +14,7 @@
         <link href="style/slick.css" rel="stylesheet">
         <link href="style/slick-theme.css" rel="stylesheet">
         <link href="style/works.css" rel="stylesheet">
-        <link href="style/style.css" rel="stylesheet">
+        <!-- <link href="style/style.css" rel="stylesheet"> -->
         <!-- <link rel="icon" type="image/png" href="images/.png"> -->
     </head>
     <body>
@@ -39,20 +39,20 @@
         <main>
             <div class="img">
                 <div class="show">
-                    <div>2023</div>
+                    <!-- <div>2023</div> -->
                     <div class="img-2023">
                         <a href="" target="_blank"><img class="img-item img-item17" src="image/works_17.jpg" alt="画像"></a>
                         <a href="" target="_blank"><img class="img-item img-item16" src="image/works_16.jpg" alt="画像"></a>
-                    </div>
-                    <div>2022</div>
-                    <div class="img-2022">
+                    <!-- </div> -->
+                    <!-- <div>2022</div> -->
+                    <!-- <div class="img-2022"> -->
                         <a href="" target="_blank"><img class="img-item img-item15" src="image/works_15.jpg" alt="画像"></a>
                         <a href="" target="_blank"><img class="img-item img-item14" src="image/works_14.jpg" alt="画像"></a>
                         <a href="" target="_blank"><img class="img-item img-item13" src="image/works_13.jpg" alt="画像"></a>
                         <a href="" target="_blank"><img class="img-item img-item12" src="image/works_12.jpg" alt="画像"></a>
-                    </div>
+                    <!-- </div>
                     <div>2021</div>
-                    <div class="img-2021">
+                    <div class="img-2021"> -->
                         <a href="" target="_blank"><img class="img-item img-item11" src="image/works_11.jpg" alt="画像"></a>
                         <a href="" target="_blank"><img class="img-item img-item9" src="image/works_09.jpg" alt="画像"></a>
                         <a href="" target="_blank"><img class="img-item img-item8" src="image/works_08.jpg" alt="画像"></a>
@@ -60,15 +60,15 @@
                         <a href="" target="_blank"><img class="img-item img-item10" src="image/works_10.jpg" alt="画像"></a>
                         <a href="" target="_blank"><img class="img-item img-item6" src="image/works_06.jpg" alt="画像"></a>
                         <a href="" target="_blank"><img class="img-item img-item5" src="image/works_05.jpg" alt="画像"></a>
-                    </div>
+                    <!-- </div>
                     <div>2020</div>
-                    <div class="img-2020">
+                    <div class="img-2020"> -->
                         <a href="" target="_blank"><img class="img-item img-item4" src="image/works_04.jpg" alt="画像"></a>
                         <a href="" target="_blank"><img class="img-item img-item3" src="image/works_03.jpg" alt="画像"></a>
                         <a href="" target="_blank"><img class="img-item img-item2" src="image//works_02.jpg" alt="画像"></a>
-                    </div>
+                    <!-- </div>
                     <div>2019</div>
-                    <div class="img-2019">
+                    <div class="img-2019"> -->
                         <a href="" target="_blank"><img class="img-item img-item1" src="image/works_01.jpg" alt="画像"></a>
                     </div>
 
