--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
         <meta charset="UTF-8">
         <title>entranceworks</title>
         <meta name="description" content="コーポレートサイト">
+        <meta name="viewport" content="width=device-width, initial-scale=1,minimun-scale=1,user-scalable=1"/>
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
+        <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+        <link href="style/layout.css" rel="stylesheet">
+        <link href="style/reset.css" rel="stylesheet">
         <link href="style/top.css" rel="stylesheet">
         <link href="style/style.css" rel="stylesheet">
         <link rel="icon" type="image/png" href="images/.png">
@@ -13,20 +18,39 @@
     <body>
         <head>
             <div class="top-head">
-                <ul>
+                <div id="wrapper">
+                    <nav id="global-navi">
+                      <p class="btn-gnavi">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                      </p>
+                      <ul class="menu">
+                        <li><a href="index.html" target="_blank">HOME</a></li>
+                        <li><a href="index.html" target="_blank">TOP</a></li>
+                        <li><a href="about.html" target="_blank">ABOUT</a></li>
+                        <li><a href="works.html" target="_blank">WORK</a></li>
+                        <li><a href="contact.php" target="_blank">CONTACT</a></li>
+                      </ul>
+                    </nav>
+                </div>    
+                <!-- <ul>
                     <li><a href="about.html">about</a></li>
                     <li><a href="works.html" target="_blank">works</a></li>
                     <li><a href="products.html" target="_blank">products</a></li>
-                </ul>
+                </ul> -->
             </div>
         </head>
         <main>
             <div class="top-img">
-                <a href="entranceworks@gmail.com"><img src="image/top.jpg" alt="トップ画像"></a>
+                <!-- <a href="entranceworks@gmail.com"> -->
+                    <img src="image/top.jpg" alt="トップ画像">
+                <!-- </a> -->
             </div>
         </main>
         <footer></footer>
         <script src="jquery-3.6.3.min.js"></script>
+        <script src="humberger.js"></script>
         <script src="works.js"></script>
     </body>
 </html>
