--- a/works.html
+++ b/works.html
@@ -27,11 +27,11 @@
                     <span></span>
                   </p>
                   <ul class="menu">
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="link/index.html">TOP</a></li>
-                    <li><a href="link/about.html">ABOUT</a></li>
-                    <li><a href="link/works.html">WORK</a></li>
-                    <li><a href="link/contact.php">CONTACT</a></li>
+                    <li><a href="index.html" target="_blank">HOME</a></li>
+                    <li><a href="index.html" target="_blank">TOP</a></li>
+                    <li><a href="about.html" target="_blank">ABOUT</a></li>
+                    <li><a href="works.html" target="_blank">WORK</a></li>
+                    <li><a href="contact.php" target="_blank">CONTACT</a></li>
                   </ul>
                 </nav>
             </div>
