--- a/works.html
+++ b/works.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>entranceworks</title>
         <meta name="description" content="コーポレートサイト">
-        <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=1"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=yes">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
         <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
