--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <title>xxx</title>
         <link href="style/style.css" rel="stylesheet">
         <meta name="description" content="コーポレートサイト">
-        <meta name="viewport" content="width=device-width, initial-scale=1,minimun-scale=1,user-scalable=1"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=yes">
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
         <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
