--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         <link href="style/style.css" rel="stylesheet">
         <meta name="description" content="コーポレートサイト">
         <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=yes">
+        <link rel="icon" type="image/png" href="https://cdn.shopify.com/s/files/1/0686/8962/5399/files/2022_01.png?v=1669872926&width=500">
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
         <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
