--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="コーポレートサイト">
         <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=yes">
         <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
+        <link rel="icon" type="image/png" href="https://cdn.shopify.com/s/files/1/0686/8962/5399/files/2022_01.png?v=1669872926&width=500">
         <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
         <link href="style/layout.css" rel="stylesheet">
