--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>xxx</title>
+        <title>entranceworks</title>
         <link href="style/style.css" rel="stylesheet">
         <meta name="description" content="コーポレートサイト">
         <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=yes">
